Initialzing my new mean.io app repository

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -4,7 +4,8 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
 <!- "modules/core/client/img/brand/logo.png"!->        
-        <img alt="Edge.Origination" class="img-responsive text-center" src="http://edgeproducts.com/app/themes/530press/lib/images/min/edge_logo.png">
+	<img alt="Edge.Origination" class="img-responsive text-center" src="http://edgeproducts.com/app/themes/530press/lib/images/min/edge_logo.png">
+
       </div>
     </div>
     <br>
@@ -16,7 +17,7 @@
   </div>
   <div>
     <h3 style="color:blue">Welcome! You've looking at the Best Loan Origination Web Application available on the market today.</h3>
-    <p><strong>Edge.Origination</strong> is a web application, a complete Client-side solution using ANGULAR framework, create and maintain by Google Team</p>
+    <p><strong>Edge.LoanOrigination</strong> is a web application, a complete Client-side solution using ANGULAR framework, create and maintain by Google Team</p>
     <h3 style="color:blue">Hightlight features:</h3>
     <ul>
       <li>
