--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
 <!- "modules/core/client/img/brand/logo.png"!->        
-	<img alt="Edge.Origination" class="img-responsive text-center" src="http://edgeproducts.com/app/themes/530press/lib/images/min/edge_logo.png">
+	<img alt="SBA.Edge" class="img-responsive text-center" src="http://edgeproducts.com/app/themes/530press/lib/images/min/edge_logo.png">
 
       </div>
     </div>
